; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/tcop/extr_postgres.c_set_plan_disabling_options.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/tcop/extr_postgres.c_set_plan_disabling_options.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [15 x i8] c"enable_seqscan\00", align 1
@.str.1 = private unnamed_addr constant [17 x i8] c"enable_indexscan\00", align 1
@.str.2 = private unnamed_addr constant [21 x i8] c"enable_indexonlyscan\00", align 1
@.str.3 = private unnamed_addr constant [18 x i8] c"enable_bitmapscan\00", align 1
@.str.4 = private unnamed_addr constant [15 x i8] c"enable_tidscan\00", align 1
@.str.5 = private unnamed_addr constant [16 x i8] c"enable_nestloop\00", align 1
@.str.6 = private unnamed_addr constant [17 x i8] c"enable_mergejoin\00", align 1
@.str.7 = private unnamed_addr constant [16 x i8] c"enable_hashjoin\00", align 1
@.str.8 = private unnamed_addr constant [6 x i8] c"false\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @set_plan_disabling_options(i8* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i8* null, i8** %8, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = getelementptr inbounds i8, i8* %9, i64 0
  %11 = load i8, i8* %10, align 1
  %12 = sext i8 %11 to i32
  switch i32 %12, label %21 [
    i32 115, label %13
    i32 105, label %14
    i32 111, label %15
    i32 98, label %16
    i32 116, label %17
    i32 110, label %18
    i32 109, label %19
    i32 104, label %20
  ]

13:                                               ; preds = %3
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i8** %8, align 8
  br label %21

14:                                               ; preds = %3
  store i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0), i8** %8, align 8
  br label %21

15:                                               ; preds = %3
  store i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.2, i64 0, i64 0), i8** %8, align 8
  br label %21

16:                                               ; preds = %3
  store i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.3, i64 0, i64 0), i8** %8, align 8
  br label %21

17:                                               ; preds = %3
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.4, i64 0, i64 0), i8** %8, align 8
  br label %21

18:                                               ; preds = %3
  store i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.5, i64 0, i64 0), i8** %8, align 8
  br label %21

19:                                               ; preds = %3
  store i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.6, i64 0, i64 0), i8** %8, align 8
  br label %21

20:                                               ; preds = %3
  store i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.7, i64 0, i64 0), i8** %8, align 8
  br label %21

21:                                               ; preds = %3, %20, %19, %18, %17, %16, %15, %14, %13
  %22 = load i8*, i8** %8, align 8
  %23 = icmp ne i8* %22, null
  br i1 %23, label %24, label %29

24:                                               ; preds = %21
  %25 = load i8*, i8** %8, align 8
  %26 = load i32, i32* %6, align 4
  %27 = load i32, i32* %7, align 4
  %28 = call i32 @SetConfigOption(i8* %25, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.8, i64 0, i64 0), i32 %26, i32 %27)
  store i32 1, i32* %4, align 4
  br label %30

29:                                               ; preds = %21
  store i32 0, i32* %4, align 4
  br label %30

30:                                               ; preds = %29, %24
  %31 = load i32, i32* %4, align 4
  ret i32 %31
}

declare dso_local i32 @SetConfigOption(i8*, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
